--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "ganache-cli": "^6.0.3",
+    "history": "^4.7.2",
     "mocha": "^5.0.0",
+    "react": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "solc": "^0.4.19",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.0.0-beta.26"
