--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "test": "mocha",
         "start": "webpack -w & nodemon server --ignore /client --ignore /public",
         "start-server": "nodemon server",
         "build-client": "webpack"
@@ -11,16 +12,31 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-preset-env": "^1.6.1",
+        "body-parser": "^1.18.2",
+        "express": "^4.16.2",
         "ganache-cli": "^6.0.3",
         "history": "^4.7.2",
         "mocha": "^5.0.0",
+        "morgan": "^1.9.0",
+        "path": "^0.12.7",
         "react": "^16.2.0",
+        "react-dom": "^16.2.0",
         "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
         "redux": "^3.7.2",
+        "redux-devtools-extension": "^2.13.2",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.2.0",
         "solc": "^0.4.19",
         "truffle-hdwallet-provider": "0.0.3",
-        "web3": "^1.0.0-beta.26",
-        "webpack": "^3.10.0"
+        "web3": "^1.0.0-beta2",
+        "webpack": "^3.11.0"
+    },
+    "devDependencies": {
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1"
     }
 }
