--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "mocha",
-        "start": "webpack -w & nodemon server --ignore /client --ignore /public",
+        "start": "webpack -w & nodemon server --ignore /browser --ignore /public",
         "start-server": "nodemon server",
         "build-client": "webpack"
     },
