added logging middleware

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "redux-thunk": "^2.2.0",
         "solc": "^0.4.19",
         "truffle-hdwallet-provider": "0.0.3",
+        "volleyball": "^1.4.1",
         "web3": "^1.0.0-beta.26",
         "webpack": "^3.11.0"
     },
