--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "babel-preset-env": "^1.6.1",
         "body-parser": "^1.18.2",
         "express": "^4.16.2",
+        "firebase": "^4.9.1",
         "ganache-cli": "^6.0.3",
         "history": "^4.7.2",
         "mocha": "^5.0.0",
