--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "mocha",
         "start": "webpack -w & nodemon server --ignore /browser --ignore /public",
         "start-server": "nodemon server",
-        "build-client": "webpack"
+        "build-client": "webpack",
+        "deploy": "node deploy.js"
     },
     "author": "",
     "license": "ISC",
@@ -18,6 +19,7 @@
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.1",
         "body-parser": "^1.18.2",
+        "ethereumjs-testrpc": "^6.0.3",
         "express": "^4.16.2",
         "firebase": "^4.9.1",
         "ganache-cli": "^6.0.3",
