--- a/react/chesschain/package.json
+++ b/react/chesschain/package.json
@@ -29,6 +29,7 @@
     "firebase-app": "0.0.1",
     "firebase-auth": "^0.1.2",
     "fs-extra": "3.0.1",
+    "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
