--- a/react/chesschain/package.json
+++ b/react/chesschain/package.json
@@ -13,6 +13,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "chess": "^0.2.8",
     "chessboard-engine": "^0.1.0",
     "chessboardjs": "0.0.1",
     "css-loader": "0.28.7",
